--- a/config.ini.sample
+++ b/config.ini.sample
@@ -1,17 +1,22 @@
 [general]
-logfile =
+logfile = git.log
 
 [hipchat]
-token =
 room =
+token =
 from =
 
-
 [repositories]
-branch = qa
-rep1 = .
-rep2 = /path/to/rep2
+remote = origin
+branch = master
+repo1 = webhook
+;repo2 = path/to/../repo2
 
 [post_commands]
-run_phinx = "php -f vendor/bin/phinx migrate"
-clear_memcached = 'echo "flush_all" | /bin/netcat -q 2 127.0.0.1 11211'
+clear_memcached = 'echo "flush_all" | nc 127.0.0.1 11211'
+run_composer = "composer update"
+
+;looks into modified files, and run post_command
+;only if matches
+[post_commands_triggers]
+run_composer = composer.lock
