--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,8 @@
 {
-    "name": "BunkerDB::WebHook",
-    "homepage": "http://bunkerdb.com/",
+    "name": "gargrag/webhook",
+    "description": "Automate github webhooks with php",
     "require": {
         "php": ">=5.3.3",
-        "hipchat/hipchat-php": "dev-master",
-        "maknz/slack": "~1.7"
+        "guzzlehttp/guzzle": "^6.2"
     }
 }
